--- a/app/src/main/res/layout/bluetoothdeviceitem.xml
+++ b/app/src/main/res/layout/bluetoothdeviceitem.xml
@@ -1,30 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="device"
-            type="android.bluetooth.BluetoothDevice" />
+            type="com.example.wifidemo1.model.DeviceData" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="70dp">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constrainedHeight="true"
-        android:textSize="25sp"
-        android:text="@{device.getName()}"
+        android:layout_height="70dp"
+        android:background="@drawable/bluetooth_device_item_background"
         >
+        <TextView
+            android:id="@+id/deviceName"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{device.mDevice.name}"
+            android:textSize="20sp"
+            app:layout_constrainedHeight="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf = "parent"
+            app:layout_constraintRight_toLeftOf="@id/deviceStatus"
+            app:layout_constraintTop_toTopOf="parent">
+        </TextView>
 
-    </TextView>
+        <TextView
+            android:id="@+id/deviceStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="@{device.mStatus}"
+            app:layout_constrainedHeight="true"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+        </TextView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 </layout>
