--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,12 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="indicatorWidth">6dp</item>
     </style>
 
     <style name="Theme.WIfiDemo1.NoActionBar">
@@ -20,6 +26,7 @@
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
         <item name="android:windowTranslucentStatus">true</item>
+        <item name="indicatorWidth">6dp</item>
     </style>
 
     <style name="Theme.WIfiDemo1.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
