--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,17 @@
 
         </androidx.viewpager2.widget.ViewPager2>
 
+        <com.example.wifidemo1.customview.Indicator
+            android:id="@+id/indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/fragmentContainer"
+            >
+
+        </com.example.wifidemo1.customview.Indicator>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
