--- a/app/src/main/res/layout/test_fragment.xml
+++ b/app/src/main/res/layout/test_fragment.xml
@@ -5,34 +5,40 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/testButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-        </Button>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/scaleContainer"
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        </androidx.recyclerview.widget.RecyclerView>
+            <com.google.android.material.search.SearchBar
+                android:id="@+id/searchbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="hello world"
+                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">
 
-        <androidx.constraintlayout.helper.widget.Flow
+            </com.google.android.material.search.SearchBar>
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+
+        <com.google.android.material.search.SearchView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:constraint_referenced_ids="testButton,scaleContainer"
-            app:flow_wrapMode="chain"
-            app:layout_constrainedHeight="true"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="match_parent"
+            app:layout_anchor="@id/searchbar">
 
-        </androidx.constraintlayout.helper.widget.Flow>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/searchSuggest"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </androidx.recyclerview.widget.RecyclerView>
+
+        </com.google.android.material.search.SearchView>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
 
