--- a/app/src/main/res/layout/second_activity.xml
+++ b/app/src/main/res/layout/second_activity.xml
@@ -1,32 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+    <androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:showPaths="true"
+        app:layoutDescription="@xml/motion_test_scene">
 
-        <com.example.wifidemo1.customview.MyGlSurfaceView
-            android:id="@+id/text"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
-            android:text="hello world"
+        <View
+            android:id="@+id/button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="#000000"
             >
 
-        </com.example.wifidemo1.customview.MyGlSurfaceView>
+        </View>
 
-        <androidx.constraintlayout.helper.widget.Flow
-            android:id="@+id/flow"
-            android:layout_width="match_parent"
+        <com.example.wifidemo1.customview.Compass
+            android:id="@+id/magnetic"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:flow_wrapMode="chain"
-            android:orientation="vertical"
-            app:constraint_referenced_ids="text"
+            android:text="hello"
             >
 
-        </androidx.constraintlayout.helper.widget.Flow>
+        </com.example.wifidemo1.customview.Compass>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.motion.widget.MotionLayout>
+
 
 </layout>
