--- a/app/src/main/res/layout/compass_main.xml
+++ b/app/src/main/res/layout/compass_main.xml
@@ -7,34 +7,17 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/black"
-        android:clipChildren="false"
-        >
+        android:layout_height="match_parent">
 
-       <com.example.wifidemo1.customview.HolyGrailBrokeLine
-           android:id="@+id/progressBar"
-           android:layout_width="match_parent"
-           android:layout_height="0dp"
-           app:layout_constraintHeight_percent="0.5"
-           >
-
-       </com.example.wifidemo1.customview.HolyGrailBrokeLine>
-
-        <androidx.constraintlayout.helper.widget.Flow
-            android:id="@+id/flow"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            app:constraint_referenced_ids="progressBar"
-            app:flow_wrapMode="chain"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="match_parent">
 
-        </androidx.constraintlayout.helper.widget.Flow>
+        </androidx.recyclerview.widget.RecyclerView>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </FrameLayout>
 
 </layout>
