--- a/app/src/main/res/layout/compass_main.xml
+++ b/app/src/main/res/layout/compass_main.xml
@@ -16,7 +16,7 @@
             android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:paddingRight="20dp"
+            android:paddingEnd="20dp"
             android:paddingBottom="20dp"
             android:paddingTop="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
