--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -1,23 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="200dp"
-    android:layout_height="200dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="horizontal"
-    android:padding="20dp"
+    android:orientation="vertical"
     android:background="@color/black"
     >
 
     <TextView
-        android:id="@+id/content"
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="20sp"
         android:textColor="@color/white"
-        android:textSize="16sp"
         >
 
     </TextView>
+
+    <com.example.wifidemo1.customview.BasePickScrollBar
+        android:id="@+id/content"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:padding="10dp"
+        >
+
+    </com.example.wifidemo1.customview.BasePickScrollBar>
 
 </LinearLayout>
 </layout>
