--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -18,14 +18,14 @@
 
     </TextView>
 
-    <com.example.wifidemo1.customview.BasePickScrollBar
+    <com.example.wifidemo1.customview.BasePickVerticalScrollBar
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:padding="10dp"
         >
 
-    </com.example.wifidemo1.customview.BasePickScrollBar>
+    </com.example.wifidemo1.customview.BasePickVerticalScrollBar>
 
 </LinearLayout>
 </layout>
