--- a/app/src/main/res/layout/compass_main.xml
+++ b/app/src/main/res/layout/compass_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -11,15 +10,39 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recy"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/input1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:boxBackgroundMode="none"
+            app:hintEnabled="false"
+            app:helperText=""
+            android:orientation="vertical"
+            android:background="@color/black"
+            >
 
-        </androidx.recyclerview.widget.RecyclerView>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="请输入"
+                android:maxLines="1"
+                android:inputType="text"
 
+                android:textColorHint="@color/cardview_shadow_start_color"
+                >
+
+            </com.google.android.material.textfield.TextInputEditText>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <androidx.constraintlayout.helper.widget.Flow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:constraint_referenced_ids="input1"
+            app:flow_wrapMode="aligned">
+
+        </androidx.constraintlayout.helper.widget.Flow>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
