--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -1,31 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:background="@color/black"
-    >
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textColor="@color/white"
-        >
-
-    </TextView>
-
-    <com.example.wifidemo1.customview.BasePickVerticalScrollBar
-        android:id="@+id/content"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:padding="10dp"
-        >
+        android:layout_height="match_parent"
+        android:background="@color/black"
+        android:orientation="vertical">
 
-    </com.example.wifidemo1.customview.BasePickVerticalScrollBar>
+        <com.example.wifidemo1.customview.RecordButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="30dp"
+            >
 
-</LinearLayout>
+        </com.example.wifidemo1.customview.RecordButton>
+
+    </RelativeLayout>
 </layout>
